--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
 image: node:8.16
 stages:
-  - e2e-test
+  - test
 e2e-test:
+  stage: test
   script:
     - npm i
     - BROWSER=ie_11_win_10 npx codeceptjs run
